# ttb-parser

./: .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: ttbpase.yml
examples/: CMakeLists.txt  main.cxx
include/: Editting.hxx  Structure.hxx  TTBParser.hxx  Timetable.hxx  Types.hxx  Utilities.hxx
src/: Editting.cxx  Structure.cxx  TTBParser.cxx  Timetable.cxx  Types.cxx  Utilities.cxx  main.cxx
tests/: CMakeLists.txt  RATP_MetroMoFri.ttb
tests/unit_tests/: CMakeLists.txt  TestTTBEditting.cxx  TestTTBParser.cxx  TestTTBStructures.cxx
